# commit0

./: .aider.model.metadata.json  .aider.model.settings.yml  .gitignore  DRY_RUN_REPORT.md  bon_entries.json  command.text  command.txt  grex_dataset.json  multi-lang-integration.md  pyproject.toml  run_pipeline.sh  run_pipeline_rust.sh  scrape_rust_pdf.py  taffy_entries.json  test_loop2
agent/: agent_utils.py  agent_utils_rust.py  agents.py  agents_rust.py  class_types.py  cli.py  cli_rust.py  openhands_formatter.py  output_writer.py  run_agent.py  run_agent_no_rich.py  run_rust_agent.py  thinking_capture.py  trajectory_writer.py
agent/prompts/: rust_system_prompt.md
agent/tests/: test_agent_utils_rust.py  test_agents.py  test_agents_rust.py  test_run_agent_rust.py  test_summarizer.py
commit0/: cli.py
commit0/data/: clap-verbosity-flag.yaml  rust_dataset.json  taffy.yaml
commit0/harness/: build.py  build_rust.py  constants.py  constants_rust.py  docker_build.py  docker_build_rust.py  docker_utils.py  dockerfiles.py  evaluate.py  evaluate_rust.py  execution_context.py  health_check_rust.py  lint.py  lint_rust.py  patch_utils_rust.py  (+6 more)
docs/: trajectory-pipeline-flow.md
prompts/: Code Review.md  Dry Run.md  Test Creation.md
reports/: DRY_RUN_REPORT.md  QC_REPORT.md  RUST_TEST_REPORT.md
rust_reports/: RUST_TEST_REPORT.md
specs_rust/: bon.pdf.bz2
tools/: batch_prepare.py  discover.py  generate_test_ids.py  prepare_repo.py  prepare_repo_rust.py  scrape_pdf.py  validate.py
tools/ruststubber/: Cargo.toml
tools/ruststubber/src/: lib.rs  main.rs  stubber.rs
(+45 files in other folders)
